@@ -617,7 +617,9 @@ void Autos::remove_nonsequential(Auto *keyframe)
 }
 
 
-
+void Autos::straighten(int64_t start, int64_t end)
+{
+}
 
 void Autos::clear(int64_t start, 
 	int64_t end, 
