@@ -43,6 +43,8 @@ public:
 		int64_t unit_start,
 		int64_t unit_end);
 
+	void straighten(int64_t start, int64_t end);
+
 	void dump();
 	Auto* add_auto(int64_t position, float value);
 	Auto* append_auto();
