@@ -24,6 +24,9 @@ menu options in the compositor popup.
 
 Tabs instead of pulldown menu for changing preferences dialogs.
 
+Keyframes->Straighten curves: straightens the bezier curves if more than one
+curve keyframe is in the highlighted area.
+
 MPEG-2 decoding directly from unencrypted Blu-Ray disks.
 
 Option to match project frame rate in asset popup.
